K8s_Home_5/deploy_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: netology
  labels:
    app: back
spec:
  selector:
    matchLabels:
      app: back
  replicas: 1
  template:
    metadata:
      labels:
        app: back
        component: net #метка для выбора 
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
