K8s_Home_5/deploy_front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: netology
  labels:
    app: front
spec:
  selector:
    matchLabels:
      app: front
  replicas: 3
  template:
    metadata:
      labels:
        app: front
        component: net #метка для выбора 
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.4
        ports:
        - containerPort: 80
