K8s_Home_5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontback-service
  namespace: netology
  labels:
    component: net
spec:
  selector:
    component: net #Метка выбора подов
  ports:
    - protocol: TCP
      name: nginx
      port: 9001
      targetPort: 80
    - protocol: TCP
      name: multitool
      port: 9002
      targetPort: 7880
